--- a/packages/packages.config
+++ b/packages/packages.config
@@ -1,4 +1,5 @@
 <packages>
   <package id="Nancy" version="0.15.3"/>
   <package id="Nancy.Hosting.Aspnet" version="0.15.3"/>
+  <package id="Tavis.UriTemplates" version="0.1.1"/>
 </packages>
