--- a/src/Intellisense.Server/Intellisense.Server.fsproj
+++ b/src/Intellisense.Server/Intellisense.Server.fsproj
@@ -55,6 +55,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Tavis.UriTemplates">
+      <HintPath>..\..\packages\Tavis.UriTemplates\lib\NET40\Tavis.UriTemplates.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\fsharpbinding\FSharp.CompilerBinding\FSharp.CompilerBinding.fsproj">
