Replace the callback with a promise object, so we can return the token from/to information immediately, and avoid flicker

--- a/src/Intellisense.Server/Intellisense.Server.fsproj
+++ b/src/Intellisense.Server/Intellisense.Server.fsproj
@@ -46,6 +46,8 @@
     <None Include="content\css\simple-hint.css" />
     <None Include="content\js\codemirror.js" />
     <None Include="content\js\simple-hint.js" />
+    <None Include="content\js\codemirror-fsharp.js" />
+    <None Include="content\js\jquery.min.js" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
