Enable detailed remote errors

--- a/src/Intellisense.Server/web.config
+++ b/src/Intellisense.Server/web.config
@@ -10,5 +10,6 @@
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </handlers>
+    <httpErrors errorMode="detailed"/>
   </system.webServer>
 </configuration>
