--- a/src/Intellisense.Server/web.config
+++ b/src/Intellisense.Server/web.config
@@ -1,15 +1,23 @@
 <configuration>
+  <configSections>
+    <section name="nancyFx" type="Nancy.Hosting.Aspnet.NancyFxSection" />
+  </configSections>
+
   <system.web>
     <httpHandlers>
-      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </httpHandlers>
   </system.web>
 
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
-    <httpErrors errorMode="Detailed"/>
+    <httpErrors errorMode="Detailed" />
   </system.webServer>
+  
+  <nancyFx>
+    <bootstrapper assembly="dummy" type="Tim.TryFSharp.Intellisense.Server.Bootstrapper, Tim.TryFSharp.Intellisense.Server"/>
+  </nancyFx>
 </configuration>
