Copy local FSharp.Core.dll

--- a/src/Intellisense.Server/Intellisense.Server.fsproj
+++ b/src/Intellisense.Server/Intellisense.Server.fsproj
@@ -53,6 +53,7 @@
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core">
       <HintPath>..\..\packages\FSharp.4.3\FSharp.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,8 +61,6 @@
       <HintPath>..\..\packages\Tavis.UriTemplates\lib\NET40\Tavis.UriTemplates.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\fsharpbinding\FSharp.CompilerBinding\FSharp.CompilerBinding.fsproj">
       <Project>{88F6940F-D300-474C-B2A7-E2ECD5B04B57}</Project>
       <Name>FSharp.CompilerBinding</Name>
@@ -74,8 +73,5 @@
       <Project>{15B7F794-0BB2-4B66-AD78-4A951F1209B2}</Project>
       <Name>Nancy.Hosting.Aspnet</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="content\" />
   </ItemGroup>
 </Project>
