--- a/src/Intellisense.Server/web.config
+++ b/src/Intellisense.Server/web.config
@@ -7,6 +7,7 @@
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </httpHandlers>
+    <httpRuntime executionTimeout="300" />
   </system.web>
 
   <system.webServer>
